--- a/VuforiaSampleSwift/Main.storyboard
+++ b/VuforiaSampleSwift/Main.storyboard
@@ -57,7 +57,7 @@
                         <viewControllerLayoutGuide type="bottom" id="sxJ-Ue-arg"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="o5U-wi-R8t">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0Xm-Vi-yWP">
@@ -112,6 +112,7 @@
                     <navigationItem key="navigationItem" title="All Subjects" id="XpH-RE-YbV">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="wcx-Q9-xuy"/>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="0Xm-Vi-yWP" id="Yo8-y0-cHx"/>
                     </connections>
@@ -120,7 +121,7 @@
             </objects>
             <point key="canvasLocation" x="1876" y="803.74812593703155"/>
         </scene>
-        <!--Subject Detail View Controller-->
+        <!--Subject Profile-->
         <scene sceneID="bsq-YZ-2PX">
             <objects>
                 <viewController id="gWf-SX-Vcc" customClass="SubjectDetailViewController" customModule="VuforiaSampleSwift" customModuleProvider="target" sceneMemberID="viewController">
@@ -230,6 +231,14 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Subject Profile" id="bHg-3Z-1yZ">
+                        <barButtonItem key="rightBarButtonItem" title="Export All" id="tHv-bd-4RT">
+                            <connections>
+                                <action selector="exportAllPressedWithSender:" destination="gWf-SX-Vcc" id="Zty-Iy-9Dk"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="Sz1-a5-IeM" id="zh4-Zf-cit"/>
